testsuite/bsc.evaluator/dynamic/errors/Ifc_Reset_Case.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling Ifc_Reset_Case.bsv
code generation for sysIfc_Reset_Case starts
Error: "Ifc_Reset_Case.bsv", line 11, column 4: (G0068)
  The expression for a reset could not be evaluated. Resets must be determined
  at compile time and cannot be computed dynamically.
  During elaboration of the interface output reset `rst_out' at
  "Ifc_Reset_Case.bsv", line 6, column 8.
  During elaboration of `sysIfc_Reset_Case' at "Ifc_Reset_Case.bsv", line 6,
  column 8.
